Bug 261884 - [WGSL] Crash when measuring size of struct that contains a runtime array
Summary: [WGSL] Crash when measuring size of struct that contains a runtime array
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-09-21 08:30 PDT by Tadeu Zagallo
Modified: 2023-09-22 04:05 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tadeu Zagallo 2023-09-21 08:30:05 PDT
...
Comment 1 Radar WebKit Bug Importer 2023-09-21 08:30:19 PDT
<rdar://problem/115843512>
Comment 2 Tadeu Zagallo 2023-09-21 08:33:01 PDT
Pull request: https://github.com/WebKit/WebKit/pull/18021
Comment 3 EWS 2023-09-22 04:05:01 PDT
Committed 268306@main (6a7d10f61b6b): <https://commits.webkit.org/268306@main>

Reviewed commits have been landed. Closing PR #18021 and removing active labels.